<resources>
    <string name="app_name">products-shop</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up_here">Don\'t have an account? <u>Sign up here</u></string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>