<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".LoginForm">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="120dp"
      android:text="@string/log_in"
      android:textSize="24sp"
      android:textColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintTop_toBottomOf="@id/textView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="30dp"
      >

    <LinearLayout
        android:id="@+id/loginBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="15dp">

      <EditText
          android:id="@+id/editTextTextEmailAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/ic_baseline_alternate_email"
          android:drawablePadding="10dp"
          android:ems="13"
          android:hint="@string/email"
          android:inputType="textEmailAddress" />

      <EditText
          android:id="@+id/editTextTextPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:drawableStart="@drawable/ic_baseline_lock"
          android:drawablePadding="10dp"
          android:ems="13"
          android:hint="@string/password"
          android:inputType="textPassword"

          />

      <CheckBox
          android:id="@+id/checkBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/remember_me" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:text="@string/sign_up_here" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>